cleaned up interface

--- a/data/application.css
+++ b/data/application.css
@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2020 - Today Goncalo Margalho (https://github.com/devalien)
+ * Copyright (c) 2020 - Adi Hezral (https://github.com/hezral)
  *
  * This program is free software; you can redistribute it and/or
  * modify it under the terms of the GNU General Public
@@ -16,247 +16,265 @@
  * Free Software Foundation, Inc., 51 Franklin Street, Fifth Floor,
  * Boston, MA 02110-1301 USA
  *
- * Authored by: Goncalo Margalho <g@margalho.info>
+ * Authored by: Adi Hezral <hezral@gmail.com>
  */
 
  @define-color shaded_bg shade(@theme_base_color, 0.92);
- @define-color shaded_base shade(@theme_base_color, 0.98);
- 
- .ql-entry {
-     background-color: @shaded_base;
-     border: none;
-     border-bottom-left-radius: 0;
-     border-bottom-right-radius:0;
-     padding-top: 8px;
-     padding-bottom: 6px;
-     padding-right: 8px;
-     padding-left:8px;
+@define-color shaded_base shade(@theme_base_color, 0.98);
+
+.ql-entry {
+    background-color: @shaded_base;
+    border: none;
+    border-bottom-left-radius: 0;
+    border-bottom-right-radius:0;
+    padding-top: 8px;
+    padding-bottom: 6px;
+    padding-right: 8px;
+    padding-left:8px;
+}
+
+.ql-button {
+    color: @theme_text_color;
+}
+
+.dialog-label {
+    margin: 12px;
+}
+.source-list .view:selected {
+    background-color: transparent;
+    background-image:
+        linear-gradient(
+            to bottom,
+            alpha (
+                #000,
+                0.11
+            ),
+            alpha (
+                #000,
+                0.07
+            )
+        );
+}
+
+.search-list-item-item {
+padding-left: 20px;
+}
+
+.sidebar, .left-header, .pane, .source-list, .drop_grid {
+    background-color: @shaded_bg;
+}
+
+.left-header, .right-header, .left-header:backdrop, .right-header:backdrop {
+    background-image: none;
+}
+.right-header, .right-stack {
+    transition: all 250ms ease-in-out;
+}
+
+.right-header, .item-editor, .welcome {
+    background-color: @shaded_base;
+} 
+
+.right-header:dir(ltr) {
+    border-left: none;
+    border-top-left-radius: 0;
+}
+
+.right-header:dir(rtl) {
+    border-top-right-radius: 0;
+}
+
+paned {
+    background-color: @shaded_bg;
+    border-bottom-left-radius: 4px;
+    border-bottom-right-radius: 4px;
+    border-top-left-radius: 4px;
+    border-top-right-radius: 4px;
+}
+
+paned.horizontal > separator {
+    background-image:
+        linear-gradient(
+            to right,
+            @menu_separator 1px,
+            @menu_separator_shadow 1px,
+            @menu_separator_shadow 2px,
+            transparent 2px
+        );
+    margin-right: 0px;
+    min-width: 1px;
+    padding-right: 0px;
+}
+
+paned.vertical > separator {
+    background-image:
+        linear-gradient(
+            @menu_separator -2px,
+            @menu_separator_shadow 1px,
+            @menu_separator_shadow 2px,
+            transparent 2px
+        );
+    margin-bottom: 0px;
+    min-height: 1px;
+}
+
+.titlebar {
+    border: none;
+}
+
+grid.titlebar {
+	padding: 0;
+}
+
+.left-header:dir(ltr) {
+    border-top-right-radius: 0;
+}
+
+.left-header:dir(rtl) {
+    border-top-left-radius: 0;
+}
+
+.dialog-title {
+    margin-left: 12px;
+}
+
+.icon-selector-button {
+    border-width: 1px;
+    border-color: @borders;
+}
+
+.large-search-entry {
+    font-size: 175%;
+}
+
+
+.left-list-label {
+    color: @theme_text_color;
+}
+
+.item-row:selected, .workspace-row:selected, .workspace-row:hover,.workspace-row:active {
+    background-color: transparent; box-shadow : none;
+}
+
+
+.toogle-box:drop(active) {
+    border: none;box-shadow : none;
+}
+
+.menu-danger {
+    color: #ed5353;
+}
+
+.grid-motion {
+    background-color: shade (
+        @theme_base_color,
+        1.4
+    );
+}
+
+.workspace-row:focus,.workspace-row:backdrop {
+    outline-width: 0;
+}
+
+.left-header, .right-header {
+    min-height: 0px;
+    padding: 0;
+}
+
+.flat .image-button {
+padding: 3px;
+}
+
+.workspace-row:selected .toogle-box, .item-row:selected .item-row2 {
+    color: shade (@theme_text_color, 0.8);
+    background-color: transparent;
+    background-image:
+        linear-gradient(
+            to bottom,
+            alpha (
+                #000,
+                0.11
+            ),
+            alpha (
+                #000,
+                0.07
+            )
+        );
+    border-image:
+        linear-gradient(
+            to bottom,
+            alpha (
+                #000,
+                0.25
+            ),
+            alpha (
+                @theme_base_color,
+                0.3
+            )
+        ) 1 1 1 1;
+    border-style: solid;
+    border-width: 1px 0;
+    box-shadow:
+        inset 0 1px 0 0 alpha (#000, 0.03),
+        inset 0 -1px 0 0 alpha (#000, 0.1);
+}
+
+.item-row2 {
+    padding-top: 1px;
+    
+    padding-left: 20px;
+    border-style: solid;
+    border-width: 1px 0;
+    border-color: transparent;
+
+}
+
+.hidden-button {
+    background-color: transparent;
+}
+
+.hidden-button image {
+    transition: all 150ms ease-in-out; 
+}
+
+.hidden-button image {
+    color: @theme_text_color;
+}
+
+.hidden-button.opened image {
+    -gtk-icon-transform: rotate(90deg);
+}
+
+.executor-button {
+    background-color: transparent;
+}
+
+.image-button {
+    min-height: 0;
+    min-width: 0;
+}
+.bold-label {
+    font-weight: bold;
+}
+
+.workspace-row, .item-row {
+    padding: 0;
+}
+
+/* NEW CSS */
+
+/* header section */
+
+.right-header, .right-stack {
+    background-color: @shaded_base;
  }
- 
- .ql-button {
-     color: @theme_text_color;
- }
- 
- .dialog-label {
-     margin: 12px;
- }
- .source-list .view:selected {
-     background-color: transparent;
-     background-image:
-         linear-gradient(
-             to bottom,
-             alpha (
-                 #000,
-                 0.11
-             ),
-             alpha (
-                 #000,
-                 0.07
-             )
-         );
- }
- 
- .search-list-item-item {
- padding-left: 20px;
- }
- 
- .sidebar, .left-header, .pane, .source-list, .drop_grid {
-     background-color: @shaded_bg;
- }
- 
- .left-header, .right-header, .left-header:backdrop, .right-header:backdrop {
-     background-image: none;
- }
- .right-header, .right-stack {
-     transition: all 250ms ease-in-out;
- }
- 
- .right-header, .item-editor, .welcome {
-     background-color: @shaded_base;
- } 
- 
- .right-header:dir(ltr) {
-     border-left: none;
-     border-top-left-radius: 0;
- }
- 
- .right-header:dir(rtl) {
-     border-top-right-radius: 0;
- }
- 
- paned {
-     background-color: @shaded_bg;
-     border-bottom-left-radius: 4px;
-     border-bottom-right-radius: 4px;
-     border-top-left-radius: 4px;
-     border-top-right-radius: 4px;
- }
- 
- paned.horizontal > separator {
-     background-image:
-         linear-gradient(
-             to right,
-             @menu_separator 1px,
-             @menu_separator_shadow 1px,
-             @menu_separator_shadow 2px,
-             transparent 2px
-         );
-     margin-right: 0px;
-     min-width: 1px;
-     padding-right: 0px;
- }
- 
- paned.vertical > separator {
-     background-image:
-         linear-gradient(
-             @menu_separator -2px,
-             @menu_separator_shadow 1px,
-             @menu_separator_shadow 2px,
-             transparent 2px
-         );
-     margin-bottom: 0px;
-     min-height: 1px;
- }
- 
- .titlebar {
-     border: none;
- }
- 
- grid.titlebar {
-     padding: 0;
- }
- 
- .left-header:dir(ltr) {
-     border-top-right-radius: 0;
- }
- 
- .left-header:dir(rtl) {
-     border-top-left-radius: 0;
- }
- 
- .dialog-title {
-     margin-left: 12px;
- }
- 
- .icon-selector-button {
-     border-width: 1px;
-     border-color: @borders;
- }
- 
- .large-search-entry {
-     font-size: 175%;
- }
- 
- 
- .left-list-label {
-     color: @theme_text_color;
- }
- 
- .item-row:selected, .workspace-row:selected, .workspace-row:hover,.workspace-row:active {
-     background-color: transparent; box-shadow : none;
- }
- 
- 
- .toogle-box:drop(active) {
-     border: none;box-shadow : none;
- }
- 
- .menu-danger {
-     color: #ed5353;
- }
- 
- .grid-motion {
-     background-color: shade (
-         @theme_base_color,
-         1.4
-     );
- }
- 
- .workspace-row:focus,.workspace-row:backdrop {
-     outline-width: 0;
- }
- 
- .left-header, .right-header {
-     min-height: 0px;
-     padding: 0;
- }
- 
- .flat .image-button {
- padding: 3px;
- }
- 
- .workspace-row:selected .toogle-box, .item-row:selected .item-row2 {
-     color: shade (@theme_text_color, 0.8);
-     background-color: transparent;
-     background-image:
-         linear-gradient(
-             to bottom,
-             alpha (
-                 #000,
-                 0.11
-             ),
-             alpha (
-                 #000,
-                 0.07
-             )
-         );
-     border-image:
-         linear-gradient(
-             to bottom,
-             alpha (
-                 #000,
-                 0.25
-             ),
-             alpha (
-                 @theme_base_color,
-                 0.3
-             )
-         ) 1 1 1 1;
-     border-style: solid;
-     border-width: 1px 0;
-     box-shadow:
-         inset 0 1px 0 0 alpha (#000, 0.03),
-         inset 0 -1px 0 0 alpha (#000, 0.1);
- }
- 
- .item-row2 {
-     padding-top: 1px;
-     
-     padding-left: 20px;
-     border-style: solid;
-     border-width: 1px 0;
-     border-color: transparent;
- 
- }
- 
- .hidden-button {
-     background-color: transparent;
- }
- 
- .hidden-button image {
-     transition: all 150ms ease-in-out; 
- }
- 
- .hidden-button image {
-     color: @theme_text_color;
- }
- 
- .hidden-button.opened image {
-     -gtk-icon-transform: rotate(90deg);
- }
- 
- .executor-button {
-     background-color: transparent;
- }
- 
- .image-button {
-     min-height: 0;
-     min-width: 0;
- }
- .bold-label {
-     font-weight: bold;
- }
- 
- .workspace-row, .item-row {
-     padding: 0;
- }
+
+.pane, .right-stack {
+    border-bottom-left-radius: 4px;
+    border-bottom-right-radius: 4px;
+}
+
+.left-header, .right-header {
+    min-height: 30px;
+    padding: 5px;
+}
