--- a/data/application.css
+++ b/data/application.css
@@ -67,9 +67,7 @@ padding-left: 20px;
 .left-header, .right-header, .left-header:backdrop, .right-header:backdrop {
     background-image: none;
 }
-.right-header, .right-stack {
-    transition: all 250ms ease-in-out;
-}
+
 
 .right-header, .item-editor, .welcome {
     background-color: @shaded_base;
@@ -176,10 +174,10 @@ grid.titlebar {
     outline-width: 0;
 }
 
-.left-header, .right-header {
+/* .left-header, .right-header {
     min-height: 0px;
     padding: 0;
-}
+} */
 
 .flat .image-button {
 padding: 3px;
@@ -269,6 +267,7 @@ padding: 3px;
     background-color: @shaded_base;
  }
 
+
 .pane, .right-stack {
     border-bottom-left-radius: 4px;
     border-bottom-right-radius: 4px;
@@ -276,5 +275,11 @@ padding: 3px;
 
 .left-header, .right-header {
     min-height: 30px;
-    padding: 5px;
+    padding-left: 6px;
+    padding-right: 6px;
+    padding-top: 4px;
+}
+
+.right-header, .right-stack, .item-editor, .welcome {
+    transition: all 100ms ease-in-out;
 }
