--- a/data/application.css
+++ b/data/application.css
@@ -357,3 +357,23 @@ headerbar > grid {
     background-color: shade(@theme_base_color, 0.89);
     box-shadow: 0px 0px 2px 0px shade(@theme_base_color, 0.7) inset;
 }
+
+
+
+/* .unit-icon-row:hover image {
+    animation: test 0.7s ease-in-out;
+}
+
+  
+@keyframes fancy-turn {
+    0%   { -gtk-icon-transform: rotate(0deg);   }
+    25%  { -gtk-icon-transform: rotate(-30deg); }
+    50%  { -gtk-icon-transform: rotate(0deg);   }
+    75%  { -gtk-icon-transform: rotate(30deg);  }
+    100% { -gtk-icon-transform: rotate(0deg);   }
+}
+
+@keyframes test {
+    0% { -gtk-icon-transform: rotate(0deg); }
+    100% { -gtk-icon-transform: rotate(180deg); }
+} */
